# playing-with-UiPath

./: Ambiente Virtual.rar  README.md
Ambiente Virtual/: Main.xaml  project.json
Ambiente Virtual/.local/: AllDependencies.json  Ambiente Virtual.nuget.props  PackageCache.json  ProjectSettings.json  dataManagerElementsOrder.json  nuget.cache
Ambiente Virtual/.local/db/: references.db
Ambiente Virtual/.local/install/: Ambiente Virtual.Mapper.json
Ambiente Virtual/.objects/: .metadata
Ambiente Virtual/Python-scripts/: pyproject.toml  scriptExample.py  scriptexample2.py  teste.py
Ambiente Virtualv2/: Main.xaml  project.json
Ambiente Virtualv2/.local/: ProjectSettings.json  dataManagerElementsOrder.json
Ambiente Virtualv2/.local/db/: references.db
Ambiente Virtualv2/.local/install/: CodedWorkflow.cs
Ambiente Virtualv2/.objects/: .metadata
Ambiente Virtualv2/Python-scripts/: pyproject.toml  scriptExample.py  teste.py
Creating asset/: Config.xlsx  CreateAsset.xaml  GetAsset.xaml  project.json
Creating asset/.local/: AllDependencies.json  Creating asset.nuget.props  PackageCache.json  ProjectSettings.json  dataManagerElementsOrder.json  nuget.cache
Creating asset/.local/db/: references.db
Creating asset/.local/install/: Creating asset.Mapper.json
Creating asset/.objects/: .metadata
