[tool.poetry]
name = "python-scripts"
version = "0.1.0"
description = ""
authors = ["Camila Caldas <camila.caldas@stone.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.2"
openpyxl = "^3.1.2"
black = "^23.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
